# speech-recognition

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  README.txt  lexicon_conf.example.json  simple_lexicon_conf.example.json
dataset/: gen_variants.py  generate_word_list_json.py  run_all_split_records.sh  split_records.sh  transcriptions.tsv  words.txt
dataset/variants/: words_0.txt  words_1.txt  words_10.txt  words_11.txt  words_12.txt  words_13.txt  words_14.txt  words_15.txt  words_16.txt  words_17.txt  words_18.txt  words_19.txt  words_2.txt  words_20.txt  words_21.txt  words_22.txt  words_23.txt  words_24.txt  words_25.txt  words_26.txt  words_27.txt  words_28.txt  words_29.txt  words_3.txt  words_30.txt  words_31.txt  words_32.txt  words_33.txt  words_34.txt  words_35.txt  words_36.txt  words_37.txt  words_38.txt  words_39.txt  words_4.txt  words_40.txt  words_41.txt  words_42.txt  words_43.txt  words_44.txt  (+60 more)
doc/: doxygen.conf
doc/html/: AbstractGaussianInitializer_8h_source.html  AlreadyBuiltModelException_8h_source.html  CVDataSet_8hpp_source.html  DataSample_8h_source.html  DataSource_8h_source.html  DefaultWindow_8h_source.html  DiscreteFourierTransform_8h_source.html  EmphasisFilter_8h_source.html  EuclideanDistance_8h_source.html  FastFourierTransform_8h_source.html  FirFilterBank_8h_source.html  FirFilter_8h_source.html  FormantVectorizer_8h_source.html  FrequencySample_8h_source.html  GaussWindow_8h_source.html  GaussianMixtureModel_8h_source.html  HMMLexicon_8h_source.html  HMM_8h_source.html  HammingWindow_8h_source.html  HannWindow_8h_source.html  HarmonicsVectorizer_8h_source.html  IClusteringMethod_8h_source.html  IDataSampleFilter_8h_source.html  IDetector_8h_source.html  IFrequencySampleFilter_8h_source.html  IFrequencyTransform_8h_source.html  IMetric_8h_source.html  ISpellingTranscription_8h_source.html  IStreamSerializable_8h_source.html  IVectorizer_8h_source.html  KMeansInitializer_8h_source.html  KMeans_8h_source.html  LanguageModel_8h_source.html  MFCCVectorizer_8h_source.html  MaxFrequenciesFilter_8h_source.html  MaxFrequencyVectorizer_8h_source.html  MaximumDistance_8h_source.html  NaiveSilenceDetector_8h_source.html  NullptrSerializationException_8h_source.html  RandomInitializer_8h_source.html  (+145 more)
doc/latex/: annotated.tex  classspeech_1_1HMMLexicon.tex  classspeech_1_1HMMLexicon_1_1GMMLikelihoodFunction.tex  classspeech_1_1HMMLexicon_1_1MultivariateGaussianHMM.tex  classspeech_1_1IStreamSerializable.eps  classspeech_1_1IStreamSerializable.tex  classspeech_1_1LanguageModel.eps  classspeech_1_1LanguageModel.tex  classspeech_1_1clustering_1_1GaussianMixtureModel.eps  classspeech_1_1clustering_1_1GaussianMixtureModel.tex  classspeech_1_1clustering_1_1IClusteringMethod.eps  classspeech_1_1clustering_1_1IClusteringMethod.tex  classspeech_1_1clustering_1_1KMeans.eps  classspeech_1_1clustering_1_1KMeans.tex  classspeech_1_1clustering_1_1exception_1_1TooLessVectorsException.eps  classspeech_1_1clustering_1_1exception_1_1TooLessVectorsException.tex  classspeech_1_1detector_1_1IDetector.eps  classspeech_1_1detector_1_1IDetector.tex  classspeech_1_1detector_1_1NaiveSilenceDetector.eps  classspeech_1_1detector_1_1NaiveSilenceDetector.tex  classspeech_1_1exception_1_1NullptrSerializationException.eps  classspeech_1_1exception_1_1NullptrSerializationException.tex  classspeech_1_1exception_1_1SerializationException.eps  classspeech_1_1exception_1_1SerializationException.tex  classspeech_1_1initializer_1_1AbstractGaussianInitializer.eps  classspeech_1_1initializer_1_1AbstractGaussianInitializer.tex  classspeech_1_1initializer_1_1KMeansInitializer.eps  classspeech_1_1initializer_1_1KMeansInitializer.tex  classspeech_1_1initializer_1_1RandomInitializer.eps  classspeech_1_1initializer_1_1RandomInitializer.tex  classspeech_1_1metric_1_1IMetric.eps  (+85 more)
lib/vl/: CMakeLists.txt
src/: CMakeLists.txt  CVDataSet.hpp  filters_test.cpp  harmonics.cpp  harmonics_filter.cpp  main.cpp
src/speech/: CMakeLists.txt  HMMLexicon.cpp  HMMLexicon.h  IStreamSerializable.h  LanguageModel.cpp  LanguageModel.h  helpers.cpp  helpers.h  operators.cpp  operators.h
src/speech/clustering/: GaussianMixtureModel.cpp  GaussianMixtureModel.h  IClusteringMethod.h  KMeans.cpp  KMeans.h
src/speech/clustering/exception/: TooLessVectorsException.h
src/speech/detector/: IDetector.h  NaiveSilenceDetector.cpp  NaiveSilenceDetector.h
src/speech/exception/: NullptrSerializationException.h  SerializationException.h
src/speech/initializer/: AbstractGaussianInitializer.h  KMeansInitializer.cpp  KMeansInitializer.h  RandomInitializer.cpp  RandomInitializer.h
src/speech/metric/: EuclideanDistance.cpp  EuclideanDistance.h  IMetric.h  MaximumDistance.cpp  MaximumDistance.h
src/speech/raw_data/: DataSample.cpp  DataSample.h  DataSource.cpp  DataSource.h  FrequencySample.cpp  FrequencySample.h  Spectrum.cpp  Spectrum.h  WaveFileDataSource.cpp  WaveFileDataSource.h
src/speech/raw_data/filtering/: EmphasisFilter.cpp  EmphasisFilter.h  FirFilter.cpp  FirFilter.h  FirFilterBank.cpp  FirFilterBank.h  IDataSampleFilter.h  IFilter.h  IFrequencySampleFilter.h  MaxFrequenciesFilter.cpp  MaxFrequenciesFilter.h
src/speech/raw_data/transform/: IFrequencyTransform.h
src/speech/spelling/: HMM.cpp  HMM.h  ISpellingTranscription.h  SpellingAdjuster.cpp  SpellingAdjuster.h
src/speech/spelling/exception/: AlreadyBuiltModelException.h
src/speech/transform/: DiscreteFourierTransform.cpp  DiscreteFourierTransform.h  FastFourierTransform.cpp  FastFourierTransform.h  IFrequencyTransform.h
src/speech/transform/window/: DefaultWindow.cpp  DefaultWindow.h  GaussWindow.cpp  GaussWindow.h  HammingWindow.cpp  HammingWindow.h  HannWindow.cpp  HannWindow.h  Window.cpp  Window.h
src/speech/vectorizer/: FormantVectorizer.cpp  FormantVectorizer.h  HarmonicsVectorizer.cpp  HarmonicsVectorizer.h  IVectorizer.h  MFCCVectorizer.cpp  MFCCVectorizer.h  MaxFrequencyVectorizer.cpp  MaxFrequencyVectorizer.h  ThirdsPowerVectorizer.cpp  ThirdsPowerVectorizer.h
tests/: CMakeLists.txt  KMeansTests.cpp  SpellingAdjusterTests.cpp
(+78 files in other folders)
